2004-09-10 Magnus Hagdorn
 * data_dep.dot: removed initialisation from graph and moved bedrock adjustment and surface calcs to end of 
   time step
 * data_dep-legend.fig: legend for data dependency plot
 * glide.tex: updated documentation for new calving code
 * glide.f90: moved upper and lower ice surface and bed rock adjustment calculations to end of time step
 * glide_setup.f90: new calving mode uses glide_mask to find floating ice. this routine is a bit of a hack 
   at the moment.
 * glide_types.f90: moved marine margin options around
 * glimmer_temp.f90: changed hsum to hsum4 which makes hadvpt twice as fast :-)
 * glimmer_thck.f90: removed lower ice surface calculations
 * f90_dependencies.py: fixed a bug where only the last module in a file was picked up. The fix is somewhat fragile
   and depends on 'end module' with a single space, we should use regular expressions or normalise the source code
	
2004-09-06 Magnus Hagdorn
 * glide_types.f90: add temporary arrays for both U and T grids
 * netCDF output can start at later time (ncdf_file.f90.in, ncdf_params.f90.in)
 * generate_ncvars.py: variables can be masked using ice thickness
 * ncdf_vars.def: enable mask for some variables

2004-09-03 Magnus Hagdorn
 * glide_types.f90, ncdf_vars.def: new mask variable
 * glide.f90: calculating mask
 * glide_types.f90: fixed a bug where we didn't make sure that ice is present
 * generate_ncvars.py: variables can now have different types
	
2004-09-01 Magnus Hagdorn
 * glide_mask.f90: added module describing model cell content, it's not hooked up yet

2004-08-27 Magnus Hagdorn
 * simple_forcing.f90: fixed another bug introduced by previous fix

2004-08-24 Magnus Hagdorn
 * the automatic detection of the length of an array in glimmer_config does not work
   so we need a separate variable for the constant basal traction case (glide_setup.f90, glide.tex)
 * glide_types.f90: some arrays for the staggered leap frog were not initialised, it still doesn't work
   though